hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__browser_session_grouped_with_unordered_actions.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---

 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 › Handle captcha gracefully

   +- Browser (headless): example.com
   |
   |   Actions
   |    MM:SS  Opened   https://example.com
   |    MM:SS  Typed    pizza
   |    MM:SS  Pressed  Enter
   |
   |   Console: Encountering captcha block
   |
   +- [Ctrl+B] View · [Esc] Stop

 • using browser  (Xs • esc to interrupt)

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
