hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__compaction_checkpoint_warning_notice.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: frame
---

 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


   History checkpoint: earlier conversation compacted.


  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
