hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_baseline.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 ✶ 📁 /workspace
    feature/context-ui  🧠 medium

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
