hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_browser_badge.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 ✶ 📁 /workspace  1 change
   🖼 Example Domain  1280×720  2025-11-05T12:00:00Z  browser_type=chromium,
   cursor_position=120,340


  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
