hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_expanded_deltas.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---

   - Writing code
   - Reading files
   - Running commands


 ✶ 📁 /workspace/subdir  3 changes
    main  🧠 high
   Recent changes:
   • reasoning: medium → high  #3
   • branch: feature/context-ui → main  #2
   • cwd: /workspace → /workspace/subdir  #2

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
