hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__empty_chat.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---



   >_ hanzo dev (v0.6.0)

      What can I code for you today?


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
