hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: GPT-5.1-Codex-Max (Medium)                                         |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   Theme              Theme+----------------------------------------+ond                        |
 |   + Switch between preset |Settings Overview                       |                           |
 |                           |                                        |                           |
 |   Updates            Auto |• ↑/↓  Move between sections            |                           |
 |   + Control CLI auto-updat|• Enter  Open selected section          |                           |
 |                           |• Tab    Jump forward between sections  |                           |
 |   ------------------------|• Esc    Close settings                 |-------------------------- |
 |                           |• ?      Toggle this help               |                           |
 |   Accounts           Auto-|                                        |                           |
 |   + Configure account swit|Press Esc to close                      |.                          |
 |                           +----------------------------------------+                           |
 |   Agents             Enabled: 11/12                                                            |
 |   + Configure linked agents and default task permissions.                                      |
 |                                                                                                |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                                           API key
